# GX

./: configure.in  gx-0.1.pc.in
doc/: README.txt
doc/reference/gx/: Makefile.am
gx/: Makefile.am  gx-connection.c  gx-connection.h  gx-cookie.c  gx-cookie.h  gx-drawable.c  gx-drawable.h  gx-event.c  gx-event.h  gx-gcontext.c  gx-gcontext.h  gx-main.c  gx-pixmap.c  gx-pixmap.h  gx-protocol-error.c  gx-protocol-error.h  gx-screen.c  gx-screen.h  gx-types.h  gx-window.c  gx-window.h  gx.h
tests/conform/: Makefile.am  test-async-reply.c  test-cookie-life-cycle.c  test-reply.c
tools/: gx-gen.c
